--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "joi-password-complexity": "^5.2.0",
     "mongodb": "^6.8.0",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
