--- a/package.json
+++ b/package.json
@@ -17,12 +17,20 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-openid-connect": "^2.17.1",
+    "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "hbs": "^4.2.0",
     "joi": "^17.13.1",
     "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.8.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   },
